--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <script th:inline="javascript">
+        var frontendData = [[${frontendData}]];
+    </script>
 </head>
 <body>
-<h1>Ok</h1>
+<div id="app">
+</div>
 <script th:src="@{http://localhost:8000/main.js}"></script>
 </body>
 </html>
