--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" style="overflow-y: auto">
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
@@ -9,9 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
-
 </head>
-<body>
+<body >
 <div id="app">
 </div>
 <script th:src="@{http://localhost:8000/main.js}"></script>
